tests/ui/borrowck/borrowck-move-from-subpath-of-borrowed-path.stderr
error[E0505]: cannot move out of `*a` because it is borrowed
  --> $DIR/borrowck-move-from-subpath-of-borrowed-path.rs:12:13
   |
LL |     let a: Box<Box<_>> = Box::new(Box::new(2));
   |         - binding `a` declared here
LL |     let b = &a;
   |             -- borrow of `a` occurs here
LL |
LL |     let z = *a;
   |             ^^ move out of `*a` occurs here
LL |     b.use_ref();
   |     - borrow later used here
   |
help: consider cloning the value if the performance cost is acceptable
   |
LL |     let b = &a.clone();
   |               ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0505`.
